--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,3 @@ body {
 .CircularProgressbar .CircularProgressbar-trail {
   stroke: #f0e6cc8c !important;
 }
-.CircularProgressbar{
-  width: 2rem !important;
-}
